<resources>

    <string-array name="langs">
        <item></item>

    </string-array>


    <string name="app_name">Ya.Translate</string>
    <string name="translate_activity">Ya.Translate</string>
    <string name="history_activity">History</string>
    <string name="favorites_activity">Favorites</string>
    <string name="delete_all_menu_item">delete all</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="enterText">Enter text</string>
    <string name="json" translatable="false">owl</string>
    <string name="deleteMenuItem">delete</string>
    <string name="noConnectionMessage">PLEASE, CONNECT TO INTERNET AND RESTART APPLICATION!</string>
    <string name="noConnectionMessage_tr">PLEASE, CONNECT TO INTERNET</string>

    <string name="copyright">Переведено сервисом «Яндекс.Переводчик</string>

    <string name="switch_b">switch</string>
    <string name="switch_tr">translate</string>
    <string name="switch_hs">history</string>
    <string name="switch_fv">favorites</string>

    <string name="settings_autotranslate_item">Detect language</string>

    <string name="toast_added_fav">Added to favorites</string>


    <string name="az">Azeri</string>
    <string name="sq">Albanian</string>
    <string name="am">Amharic</string>
    <string name="en">English</string>
    <string name="ar">Arabian</string>
    <string name="hy">Armenian</string>
    <string name="af">Af</string>
    <string name="eu">Basque</string>
    <string name="ba">Bashkir</string>
    <string name="be">Belarusian</string>
    <string name="bp">Bengali</string>
    <string name="bg">Bulgarian</string>
    <string name="bs">Bosnian</string>
    <string name="cy">Welsh</string>
    <string name="hu">Hungarian</string>
    <string name="vi">Vietnamese</string>
    <string name="ht">Haitian(Creole)</string>
    <string name="gl">Galician</string>
    <string name="nl">Dutch</string>
    <string name="mrj">Mountain</string>
    <string name="el">Greek</string>
    <string name="ka">Georgian</string>
    <string name="gu">Gujarati</string>
    <string name="da">Da</string>
    <string name="he">Hebrew</string>
    <string name="yi">Yiddish</string>
    <string name="id">Indonesian</string>
    <string name="ga">Irish</string>
    <string name="it">Italian</string>
    <string name="is">Icelandic</string>
    <string name="es">Spanish</string>
    <string name="kk">Kazakh</string>
    <string name="kn">Kannada</string>
    <string name="ca">Catalan</string>
    <string name="ky">Kyrgyz</string>
    <string name="fr">French</string>
    <string name="ko">Korean</string>
    <string name="xh">Xhosa</string>
    <string name="la">Latin</string>
    <string name="lv">Latvian</string>
    <string name="lt">Lithuanian</string>
    <string name="lb">Luxembourgish</string>
    <string name="mg">Malagasy</string>
    <string name="ms">Malay</string>
    <string name="ml">Malayalm</string>
    <string name="mt">Maitese</string>
    <string name="mk">Macedonian</string>
    <string name="mi">Maori</string>
    <string name="mr">Marathi</string>
    <string name="mhr">Mari</string>
    <string name="mn">Mongolian</string>
    <string name="de">German</string>
    <string name="ne">Nepali</string>
    <string name="no">Norwegian</string>
    <string name="pa">Punjabi</string>
    <string name="pap">Papiamento</string>
    <string name="fa">Persian</string>
    <string name="pl">Polish</string>
    <string name="pt">Portuguese</string>
    <string name="ro">Romanian</string>
    <string name="ru">Russian</string>
    <string name="ceb">Cebuano</string>
    <string name="sr">Serbian</string>
    <string name="si">Sinhala</string>
    <string name="sk">Slovak</string>
    <string name="sl">Slovenian</string>
    <string name="sw">Swahili</string>
    <string name="su">Sundanese</string>
    <string name="tg">Tajik</string>
    <string name="th">Thai</string>
    <string name="tl">Tagalog</string>
    <string name="ta">Tamil</string>
    <string name="tt">Tatar</string>
    <string name="te">Telugu</string>
    <string name="tr">Turkish</string>
    <string name="udm">Udmurt</string>
    <string name="uz">Uzbek</string>
    <string name="uk">Ukrainian</string>
    <string name="ur">Urdu</string>
    <string name="fi">Finnish</string>
    <string name="zh">Chinese</string>
    <string name="hi">Hindi</string>
    <string name="hr">Croatian</string>
    <string name="cs">Czech</string>
    <string name="sv">Swedish</string>
    <string name="gd">Scottish</string>
    <string name="et">Estonian</string>
    <string name="eo">Esperanto</string>
    <string name="jv">Javanese</string>
    <string name="ja">Japanese</string>
</resources>
