<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/switchBtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/switch_b" />
        </LinearLayout>

        <Spinner
            android:id="@+id/toSpinner"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <EditText
        android:id="@+id/fromText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/enterText"
        />

    <EditText
    android:id="@+id/toText"
    android:layout_width="match_parent"
    android:layout_height="268dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_tr"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/switch_tr"
            android:layout_weight="0.33"
            android:enabled="false"/>

        <Button
            android:id="@+id/button_hs"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="startHistory"
            android:text="@string/switch_hs" />
        <Button
            android:id="@+id/button_fv"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/switch_fv"
            android:layout_weight="0.33"
            android:onClick="startFavorites"
            />
    </LinearLayout>

</LinearLayout>