<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.test.laz.ru.helloapp.FavoritesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_tr"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/switch_tr"
            android:onClick="startTranslate"/>

        <Button
            android:id="@+id/button_hs"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="startHistory"
            android:text="@string/switch_hs"
            android:enabled="false"/>

        <Button
            android:id="@+id/button_fv"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/switch_fv" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
