<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id= "@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.33"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0.33">

            <ImageButton
                android:id="@+id/button_tr"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@null"
                android:onClick="startTranslate"
                android:src="@drawable/translate_selector"
                android:text="@string/switch_tr" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0.33">
            <ImageButton
                android:id="@+id/button_hs"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:enabled="false"
                android:background="@null"
                android:src="@drawable/history_selector"
                android:text="@string/switch_hs" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="0.33">

            <ImageButton
                android:id="@+id/button_fv"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:onClick="startFavorites"
                android:background="@null"
                android:src="@drawable/favorites_selector"
                android:text="@string/switch_fv" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>